<resources>
    <string name="app_name">Shawn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_btn">Set Event</string>
    <string name="date">wed,5 Feb</string>
    <string name="heading">Schedule Book</string>
    <string name="arrived">Arrived at the parking spot :</string>
    <string name="departure">Departure at the parking spot :</string>
    <string name="book">Your book</string>
    <string name="parking">Parking slot 17</string>
    <string name="address">Center mosque road 9,sector 8,uttara 1230</string>
    <string name="loream_ipsum">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
</resources>
