<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ScheduleFragment">

    <!-- android:background="#52000000"TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:textSize="22dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        />
    <view
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrived"
        android:layout_margin="3dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:textColor="@color/arrived"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
        android:id="@+id/picker"
        app:picker_textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        app:picker_selectorColor="@android:color/transparent"
        app:picker_curved="true"
        app:picker_cyclic="true"
        app:picker_visibleItemCount="7"
        />
    </LinearLayout>
</LinearLayout>