<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/setBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/home_btn" />

        <LinearLayout
            android:id="@+id/bookedLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/book"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/parking"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/address"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9898" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/arrivedtimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="Arriving 12:30pm"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/departureTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/arrivedtimeTV"
                    android:text="Departure-04:30pm" />

                <TextView
                    android:id="@+id/timeDifferenceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="2dp"
                    android:padding="2dp"
                    android:text="2:30h"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9A9898" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:layout_margin="2dp"
                android:padding="3dp"
                android:scaleType="fitXY"
                android:src="@drawable/map_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/moreBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:padding="2dp"
                    android:text="More Time"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btnLiveParking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:padding="2dp"
                    android:text="Live Parkin"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countDownTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01:25"
                    android:textColor="@android:color/black"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="1dp"
                    android:padding="1dp"
                    android:text="min"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp"
                android:text="@string/loream_ipsum"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewTermsCondition"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/border_style"
                android:gravity="center"
                android:padding="3dp"
                android:text="T&amp;C"
                android:textSize="14sp" />

            <Button
                android:id="@+id/departureBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/butto_shape"
                android:padding="4dp"
                android:text="Car Deprature"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
